--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -476,7 +476,7 @@ ScreenManager:
                 text_color: "#DD3846"
 
         MDLabel:
-            id: job_title_label
+            id: job_title
             text: "Job: "
             theme_text_color: "Custom"
             text_color: "#DD3846"
