--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -37,6 +37,12 @@ ScreenManager:
         padding: "40dp"
         spacing: "20dp"
 
+        Image:
+            source: "logo1.png"
+            size_hint_y: None
+            height: "160dp"
+            pos_hint: {"center_x": 0.5}
+
         MDLabel:
             text: "[b]GigSkarte[/b]"
             markup: True
