--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -455,34 +455,33 @@ ScreenManager:
                 on_release:
                     root.manager.current = "job_screen_1"
 
-            MDLabel:
-                text: "Employer's Name"
-                theme_text_color: "Custom"
-                text_color: "#DD3846"
-
         MDLabel:
             id: job_title
             text: "Job: "
             theme_text_color: "Custom"
             text_color: "#DD3846"
+            halign: "center"
 
         MDLabel:
             id: job_location
             text: "Location: "
             theme_text_color: "Custom"
             text_color: "#DD3846"
+            halign: "center"
 
         MDLabel:
             id: job_time
             text: "Date & Time: "
             theme_text_color: "Custom"
             text_color: "#DD3846"
+            halign: "center"
 
         MDLabel:
             id: job_salary
             text: "Salary: "
             theme_text_color: "Custom"
             text_color: "#DD3846"
+            halign: "center"
 
         MDButton:
             text: "Accept job offer"
