--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -443,8 +443,8 @@ ScreenManager:
 <JobDetailsScreen>:
     MDBoxLayout:
         orientation: 'vertical'
-        padding: 10
-        spacing: 10
+        padding: 20dp
+        spacing: 10dp
         md_bg_color: "#EEEAE2"
 
         MDBoxLayout:
@@ -490,6 +490,7 @@ ScreenManager:
             md_bg_color: "#DD3846"
             text_color: "white"
             size_hint_y: 0.2
+            halign: "center"
             on_release:
                 root.accept_job()
 
