--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -61,14 +61,14 @@ ScreenManager:
 
         MDTextField:
             id: first_name
-            hint_text: "First Name"
+            text: "First Name"
             helper_text: "Required"
             helper_text_mode: "on_error"
             required: True
 
         MDTextField:
             id: last_name
-            hint_text: "Last Name"
+            text: "Last Name"
             text_color: 0, 0, 0, 1
             fill_color: 1, 1, 1, 1
             line_color_focus: 0, 0, 0, 1
@@ -78,7 +78,7 @@ ScreenManager:
 
         MDTextField:
             id: password
-            hint_text: "Password"
+            text: "Password"
             password: True
             helper_text: "Required"
             helper_text_mode: "on_error"
@@ -86,7 +86,7 @@ ScreenManager:
 
         MDTextField:
             id: phone
-            hint_text: "Phone Number"
+            text: "+63"
             text_color: 0, 0, 0, 1
             fill_color: 1, 1, 1, 1
             line_color_focus: 0, 0, 0, 1
@@ -97,7 +97,7 @@ ScreenManager:
 
         MDTextField:
             id: email
-            hint_text: "Email Address (optional)"
+            text: "Email Address (optional)"
             text_color: 0, 0, 0, 1
             fill_color: 1, 1, 1, 1
             line_color_focus: 0, 0, 0, 1
@@ -180,7 +180,7 @@ ScreenManager:
 
         MDTextField:
             id: phone
-            text: "Phone Number"
+            text: "+63"
             text_color: 0, 0, 0, 1
             mode: "filled"
             input_filter: "int"
@@ -189,7 +189,7 @@ ScreenManager:
 
         MDTextField:
             id: password
-            hint_text: "Password"
+            text: "Password"
             password: True
             helper_text: "Required"
             helper_text_mode: "on_error"
@@ -397,12 +397,13 @@ ScreenManager:
             radius: [20]
 
 <JobScreen1>:
-    BoxLayout:
+    MDBoxLayout:
         orientation: 'vertical'
         md_bg_color: "#EEEAE2"
 
         MDTopAppBar:
             type: "small"
+            md_bg_color: "#DD3846"
 
             MDTopAppBarLeadingButtonContainer:
 
@@ -425,13 +426,9 @@ ScreenManager:
                 cols: 2
                 spacing: dp(10)
                 padding: dp(10)
-                MDLabel:
-                    text: "Job 4 - Click me"
-                    halign: "center"
-                    valign: "middle"
-                    text_size: self.size
 
         MDNavigationBar:
+            color: "DD3846"
             panel_color: "#222222"
             selected_color_background: "#DD3846"
             text_color_active: "#000000"
@@ -481,6 +478,13 @@ ScreenManager:
         MDLabel:
             id: job_salary
             text: "Salary: "
+            theme_text_color: "Custom"
+            text_color: "#DD3846"
+            halign: "center"
+
+        MDLabel:
+            id: job_number
+            text: "+63"
             theme_text_color: "Custom"
             text_color: "#DD3846"
             halign: "center"
@@ -572,7 +576,7 @@ ScreenManager:
             text: "Job Title:"
         MDTextField:
             id: edit_title
-            hint_text: "Job Title"
+            text: "Job Title"
             required: True
             helper_text: "Enter the job position/title"
             helper_text_mode: "on_focus"
@@ -580,7 +584,7 @@ ScreenManager:
 
         MDTextField:
             id: edit_location
-            hint_text: "Location"
+            text: "Location"
             required: True
             helper_text: "Enter the job location"
             helper_text_mode: "on_focus"
@@ -588,7 +592,7 @@ ScreenManager:
 
         MDTextField:
             id: edit_time
-            hint_text: "Date & Time"
+            text: "Date & Time"
             required: True
             helper_text: "e.g. Monday 9am–5pm"
             helper_text_mode: "on_focus"
@@ -596,11 +600,20 @@ ScreenManager:
 
         MDTextField:
             id: edit_salary
-            hint_text: "Salary"
+            text: "Salary"
             required: True
             helper_text: "Enter the compensation (e.g. ₱500/day)"
             helper_text_mode: "on_focus"
             line_color_focus: "#000000"
+
+        MDTextField:
+            id: edit_number
+            text: "+63"
+            required: True
+            helper_text: "Enter your phone number"
+            helper_text_mode: "on_focus"
+            line_color_focus: "#000000"
+
 
         MDButton:
             style: "filled"
@@ -701,11 +714,26 @@ ScreenManager:
             halign: "right"
             valign: "middle"
             text_size: self.size
+        
         MDLabel:
             text: ""
             halign: "right"
             valign: "middle"
             text_size: self.size
+
+        MDLabel:
+            text: "[b]+63[/b]"
+            markup: True
+            halign: "right"
+            valign: "middle"
+            text_size: self.size
+        
+        MDLabel:
+            text: root.job_number
+            halign: "right"
+            valign: "middle"
+            text_size: self.size
+
 
 <PendingJobsScreen>:
     name: "pending_jobs"
@@ -725,7 +753,7 @@ ScreenManager:
             height: 50
             padding: 5
             spacing: 5
-            Button:
+            MDButton:
                 text: "<"
                 font_size: 24
                 background_color: 1, 1, 1, 1
