height of the logo

--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -39,10 +39,14 @@ ScreenManager:
         padding: "40dp"
         spacing: "20dp"
 
+        Widget:
+            size_hint_y: None
+            height: "20dp"
+            
         Image:
             source: "logo1.png"
             size_hint_y: None
-            height: "160dp"
+            height: "130dp"
             pos_hint: {"center_x": 0.5}
 
         MDLabel:
